Ingress/microk8s_ingress_for_flask.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: werss-portal-flask
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-microk8s
  labels:
    app: flask
spec:
  rules:
    - host: wersss.mooo.com
      http:
        paths:
          - path: /flask
            pathType: Prefix
            backend:
              service:
                name: flask
                port:
                  number: 5000
  tls:
    - hosts:
        - wersss.mooo.com
      secretName: tls-example
